kube-dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kube.observability.speechify.dev`)
      kind: Rule
      services:
        - kind: Service
          name: kubernetes-dashboard
          port: 443
          scheme: https
          serversTransport: insecure-transport
  tls:
    secretName: kube.observability.speechify.dev
